--- a/styles/default.css
+++ b/styles/default.css
@@ -7,4 +7,36 @@
 body {
   margin: 0;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: #1044e8;
+}
+
+img {
+  margin: 50px;
+}
+
+h1 {
+  color: #fff;
+}
+
+button {
+  background: transparent;
+  border: 1px solid #fff;
+  border-radius: 5px;
+  padding: 10px 20px;
+  color: #fff;
+  font-weight: bold;
+  cursor: pointer;
+}
+button:hover {
+  border: 1px solid #1aaedb;
+  color: #1aaedb;
+}
+button:active {
+  border: 1px solid #10e8a4;
+  color: #10e8a4;
 }
